# h5textual

./: LICENSE.txt  README.md  pyproject.toml
src/h5textual/: __about__.py  __init__.py  entry_point.py  h5textual.py  horizontal_layout.tcss
